static/style.css
html, body {
  background: #303030;
  color: #fff;
  font-family: 'Ubuntu', sans-serif;
  margin: 0 auto;
}

h1, h2, h3, h4, h5, a, b, p, span { color: #fff; }
img { -webkit-user-drag: none; }

code {
  background: rgba(0, 0, 0, .5);
  padding: 3px 6px;
}

:target {
  position: relative;
}

:target::before {
  position: absolute;
  content: " ";
  background: rgba(250, 166, 26, .1);
  height: 100%;
  width: 100%;
  top: -3px;
  left: -3px;
  padding-right: 6px;
  padding-bottom: 6px;
}

.channel-title {
  align-items: center;
  background-color: #181818;
  display: flex;
  flex-direction: row;
  height: 36px;
  padding: .5em;
}

.channel-title .name { margin-left: .25em; }
.channel-title .expire { margin-left: .5em; }

.channel-title svg, .channel-title .name {
  fill: #ccc;
  color: #ccc;
}

.link {
  color: #3498db;
}

.messages {
  display: flex;
  flex-direction: column;
  max-width: 100%;
  padding: 0 1em;
  position: relative;
}

.context-container {
  box-shadow: rgba(0, 0, 0, .2) 0 2px 0px, rgba(0, 0, 0, .06) 0 3px 0;
  margin-bottom: .5em;
  width: 100%;
}

.context {
  background: #282828;
  display: block;
  padding: 1em 2em;
}

.context .author, .context .context-ticket {
  margin: 0;
}

.messages .message .content .upload {
  display: grid;
  height: auto;
  max-height: 250px;
  max-width: 520px;
  object-fit: contain;
  width: auto;
}

.message .content .image-container {
  margin-top: .3em;
  position: relative;
  width: 100%;
}

.author_id {
  font-weight: normal;
  font-size: 14px;
  letter-spacing: 0;
}

.messages .message .avatar {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  left: 0;
  position: absolute;
}

.messages .message .username {
  font-size: 18px;
  font-weight: 600;
  letter-spacing: 1px;
  margin: 0;
}

.messages .message .msg {
  margin: 0;
  font-size: 16px;
  color: #ccc;
  white-space: pre-wrap;
  text-transform: none;
}

.emoji {
  height: 22px;
  object-fit: contain;
  vertical-align: bottom;
  width: 22px;
}

.messages .message {
  display: flex;
  flex-direction: column;
  position: relative;
  padding: 2px 54px;
  margin: .5em 0;
}

.message .content-container .content {
  display: flex;
  flex-direction: column;
  padding: 2px 0;
  text-decoration: none;
  text-transform: none;
  transition: transform 250ms ease-in-out;
  width: auto;
}

.message .content-container .content:hover { background-color: rgba(0, 0, 0, .25); }

.closed-ticket {
  border-top: 2px solid rgba(231, 76, 60, .5);
  display: block;
  font-size: 24px;
  letter-spacing: 2px;
  margin: 0;
  padding: .5em 0;
  text-align: center;
  width: 100%;
}

/* ERROR PAGE */
.nothing-found {
  align-items: center;
  display: flex;
  height: 100%;
  justify-content: center;
  width: 100%;
}

.nothing-found h1 {
  text-align: center;
  width: 100%;
  position: relative;
}

.nothing-found .code {
  color: #e74c3c;
}

/* INTRO */
.intro-container {
  align-items: center;
  animation: background-pulse 5s ease-in-out infinite;
  background: #181818;
  display: flex;
  font-size: 22px;
  height: 100%;
  flex-direction: column;
  justify-content: center;
  letter-spacing: 1px;
  width: 100%;
}

.intro-container .text { margin: .25em 0; }
.intro-container .title {
  margin: .1em 0;
  font-size: 32px;
  letter-spacing: 1px;
}

@keyframes background-pulse {
  0% { background: #181818; }
  30% { background: #282828; }
  60% { background: #282828; }
  100% { background: #181818; }
}

